err/products.listen.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/listen'...
Listing './lib/python3.5/site-packages/Products/listen/browser'...
Compiling './lib/python3.5/site-packages/Products/listen/browser/mail_archive_views.py'...
***   File "./lib/python3.5/site-packages/Products/listen/browser/mail_archive_views.py", line 182
    raise Unauthorized, \
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/listen/browser/mail_message_views.py'...
***   File "./lib/python3.5/site-packages/Products/listen/browser/mail_message_views.py", line 177
    raise Unauthorized, \
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/listen/content'...
Listing './lib/python3.5/site-packages/Products/listen/content/tests'...
Listing './lib/python3.5/site-packages/Products/listen/content/tests/corpus'...
Listing './lib/python3.5/site-packages/Products/listen/event_templates'...
Listing './lib/python3.5/site-packages/Products/listen/extras'...
Compiling './lib/python3.5/site-packages/Products/listen/extras/member_search.py'...
***   File "./lib/python3.5/site-packages/Products/listen/extras/member_search.py", line 103
    raise AttributeError, "No acl_users"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/listen/interfaces'...
Listing './lib/python3.5/site-packages/Products/listen/lib'...
Compiling './lib/python3.5/site-packages/Products/listen/lib/common.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (common.py, line 219)
Compiling './lib/python3.5/site-packages/Products/listen/lib/htmlrender.py'...
***   File "./lib/python3.5/site-packages/Products/listen/lib/htmlrender.py", line 354
    print render(input)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/listen/lib/tests'...
Listing './lib/python3.5/site-packages/Products/listen/locales'...
Listing './lib/python3.5/site-packages/Products/listen/portlets'...
Listing './lib/python3.5/site-packages/Products/listen/profiles'...
Listing './lib/python3.5/site-packages/Products/listen/profiles/default'...
Listing './lib/python3.5/site-packages/Products/listen/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/listen/profiles/membrane_lookup'...
Listing './lib/python3.5/site-packages/Products/listen/skins'...
Listing './lib/python3.5/site-packages/Products/listen/skins/listen'...
Listing './lib/python3.5/site-packages/Products/listen/tests'...
Listing './lib/python3.5/site-packages/Products/listen/utilities'...
Compiling './lib/python3.5/site-packages/Products/listen/utilities/list_lookup.py'...
***   File "./lib/python3.5/site-packages/Products/listen/utilities/list_lookup.py", line 147
    raise UserError, "This list is already registered, use "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/listen/utilities/rename.py'...
***   File "./lib/python3.5/site-packages/Products/listen/utilities/rename.py", line 130
    raise UserError, "Id must contain only ASCII characters."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/listen/utilities/tests'...
Compiling './lib/python3.5/site-packages/Products/listen/utilities/token_to_email.py'...
***   File "./lib/python3.5/site-packages/Products/listen/utilities/token_to_email.py", line 67
    except Unauthorized, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.listen-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
